changed tuning and training to be set on seed 42

--- a/src/run_baseline_mlp_allyears.ipynb
+++ b/src/run_baseline_mlp_allyears.ipynb
@@ -173,7 +173,7 @@
     {
      "data": {
       "text/plain": [
-       "<torch._C.Generator at 0x7f3d4c1b9fb0>"
+       "<torch._C.Generator at 0x7fb011051fb0>"
       ]
      },
      "execution_count": 6,
@@ -210,7 +210,7 @@
     {
      "data": {
       "text/plain": [
-       "<torch._C.Generator at 0x7f3d4c1b9fb0>"
+       "<torch._C.Generator at 0x7fb011051fb0>"
       ]
      },
      "execution_count": 7,
@@ -1209,6 +1209,22 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import random\n",
+    "def set_seed(seed):\n",
+    "    random.seed(seed)\n",
+    "    np.random.seed(seed)\n",
+    "    torch.manual_seed(seed)\n",
+    "    torch.cuda.manual_seed_all(seed)\n",
+    "    torch.backends.cudnn.deterministic = True\n",
+    "    torch.backends.cudnn.benchmark = False"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1222,6 +1238,7 @@
    "outputs": [],
    "source": [
     "def objective(trial):\n",
+    "    set_seed(42)\n",
     "    # Define hyperparameters to search over\n",
     "    n_hidden_layers = trial.suggest_int(\"n_hidden_layers\", 1, 5)\n",
     "    n_hidden_units = trial.suggest_int(\"n_hidden_units\", 32, 256)\n",
@@ -1249,24 +1266,13 @@
     "\n",
     "\n",
     "# Run Optuna optimization\n",
-    "study = optuna.create_study(direction=\"minimize\", study_name=\"mlp_hyperparameter_optimization_baseline_allyears\", storage=\"sqlite:///mlp_hyperparameter_optimization.db\", load_if_exists=True)\n",
+    "study = optuna.create_study(direction=\"minimize\", study_name=\"mlp_hyperparameter_optimization_baseline_allyears_setseed\", storage=\"sqlite:///mlp_hyperparameter_optimization.db\", load_if_exists=True)\n",
     "\n",
     "study.optimize(objective, n_trials=100)\n",
     "\n",
     "# Print best hyperparameters\n",
     "best_params = study.best_params\n",
     "print(\"Best Hyperparameters:\", best_params)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Interrupted tuning since it was taking too long (at 50 trials)\n",
-    "# Copied best params directly from the .db file on optuna dashboard\n",
-    "best_params = {'n_hidden_layers': 4, 'n_hidden_units': 191, 'lr': 0.0002099693529342787, 'weight_decay': 3.4334611075297167e-07, 'batch_size': 8}"
    ]
   },
   {
@@ -1295,15 +1301,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import json\n",
+    "file_path = f\"{RESULTS_PATH}/best_params/{BESTPARAMS_FILENAME}\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Best Hyperparameters saved to /home/rachel/forecasting_smog_PEML/src/results/best_params/best_params_MLP_no2_MSE_allyears.txt\n"
+     ]
+    }
+   ],
+   "source": [
     "\n",
     "import json\n",
-    "\n",
-    "file_path = f\"{RESULTS_PATH}/best_params/{BESTPARAMS_FILENAME}\"\n",
-    "\n",
     "with open(file_path, \"w\") as f:\n",
     "    json.dump(best_params, f, indent=4)  # Pretty format for readability\n",
     "\n",
@@ -1321,9 +1342,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loaded Best Parameters: {'n_hidden_layers': 4, 'n_hidden_units': 191, 'lr': 0.0002099693529342787, 'weight_decay': 3.4334611075297167e-07, 'batch_size': 8}\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "with open(file_path, \"r\") as f:\n",
@@ -1334,23 +1363,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Best Hyperparameters saved to file /home/rachel/forecasting_smog_PEML/src/results/best_params/best_params_MLP_no2_MSE_allyears.txt\n"
-     ]
+     "data": {
+      "text/plain": [
+       "'MSE'"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "# save best params to a file\n",
-    "with open(f'{RESULTS_PATH}/best_params/{BESTPARAMS_FILENAME}', 'w') as f:\n",
-    "    for key in best_params.keys():\n",
-    "        f.write(\"%s: %s\\n\" % (key, best_params[key]))\n",
-    "print(f\"Best Hyperparameters saved to file {RESULTS_PATH}/best_params/{BESTPARAMS_FILENAME}\")"
+    "LOSS_FUNC"
    ]
   },
   {
@@ -1467,7 +1495,7 @@
     }
    ],
    "source": [
-    "torch.manual_seed(34)\n",
+    "set_seed(42)\n",
     "# Train the model with the best hyperparameters\n",
     "best_model_baseline = BasicMLP(\n",
     "    N_INPUT_UNITS=train_dataset.__n_features_in__(),\n",
@@ -1492,7 +1520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1507,7 +1535,7 @@
     }
    ],
    "source": [
-    "torch.manual_seed(34)  # Set seed for reproducibility\n",
+    "set_seed(42)\n",
     "best_model_baseline.load_state_dict(torch.load(f\"{MODEL_PATH}/{MODEL_PATH_NAME}\"))\n",
     "best_model_baseline.eval()\n",
     "\n",
