--- a/src/run_mlp_pde_nmer_const_allyears.ipynb
+++ b/src/run_mlp_pde_nmer_const_allyears.ipynb
@@ -176,7 +176,7 @@
     {
      "data": {
       "text/plain": [
-       "<torch._C.Generator at 0x7f7e31cadfb0>"
+       "<torch._C.Generator at 0x7f113ab21fb0>"
       ]
      },
      "execution_count": 6,
@@ -213,7 +213,7 @@
     {
      "data": {
       "text/plain": [
-       "<torch._C.Generator at 0x7f7e31cadfb0>"
+       "<torch._C.Generator at 0x7f113ab21fb0>"
       ]
      },
      "execution_count": 7,
@@ -304,7 +304,13 @@
      "output_type": "stream",
      "text": [
       "Imported train_2017_combined_u.csv\n",
-      "Imported train_2018_combined_u.csv\n",
+      "Imported train_2018_combined_u.csv\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Imported train_2020_combined_u.csv\n",
       "Imported train_2021_combined_u.csv\n",
       "Imported train_2022_combined_u.csv\n",
@@ -1227,9 +1233,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train loader length:  41\n"
+     ]
+    }
+   ],
    "source": [
     "# Create train & validation loaders (following the original code)\n",
     "temp_batch_size = 16\n",
@@ -1249,7 +1263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1286,7 +1300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1357,7 +1371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1380,9 +1394,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import random\n",
+    "def set_seed(seed):\n",
+    "    random.seed(seed)\n",
+    "    np.random.seed(seed)\n",
+    "    torch.manual_seed(seed)\n",
+    "    torch.cuda.manual_seed_all(seed)\n",
+    "    torch.backends.cudnn.deterministic = True\n",
+    "    torch.backends.cudnn.benchmark = False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "batch_size = 16 # set as 16 and freeze it for now\n",
     "\n",
     "def objective(trial):\n",
+    "    set_seed(42)\n",
     "    # Define hyperparameters to search over\n",
     "    n_hidden_layers = trial.suggest_int(\"n_hidden_layers\", 1, 5)\n",
     "    n_hidden_units = trial.suggest_int(\"n_hidden_units\", 32, 256)\n",
@@ -1409,7 +1440,7 @@
     "\n",
     "\n",
     "# Run Optuna optimization\n",
-    "study = optuna.create_study(direction=\"minimize\", study_name=\"mlp_hyperparameter_optimization_PDE_nmer_const_all_years_updated\", storage=\"sqlite:///mlp_hyperparameter_optimization_phy_pde.db\", load_if_exists=True)\n",
+    "study = optuna.create_study(direction=\"minimize\", study_name=\"mlp_hyperparameter_optimization_PDE_nmer_const_all_years_setseed\", storage=\"sqlite:///mlp_hyperparameter_optimization_phy_pde.db\", load_if_exists=True)\n",
     "\n",
     "study.optimize(objective, n_trials=50)\n",
     "\n",
@@ -1465,7 +1496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1502,7 +1533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1522,7 +1553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1531,7 +1562,7 @@
        "'PDE_nmer_const'"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1542,7 +1573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1655,7 +1686,7 @@
     }
    ],
    "source": [
-    "torch.manual_seed(34)\n",
+    "set_seed(42)\n",
     "# Train the model with the best hyperparameters\n",
     "best_model = BasicMLP(\n",
     "    N_INPUT_UNITS=train_dataset.__n_features_in__(),\n",
@@ -1680,7 +1711,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1695,7 +1726,6 @@
     }
    ],
    "source": [
-    "torch.manual_seed(34)  # Set seed for reproducibility\n",
     "best_model.load_state_dict(torch.load(f\"{MODEL_PATH}/{MODEL_PATH_NAME}\"))\n",
     "best_model.eval()\n",
     "\n",
