retuned everything except Linearshift with proper set seeds

--- a/src/run_baseline_mlp_allyears.ipynb
+++ b/src/run_baseline_mlp_allyears.ipynb
@@ -1260,13 +1260,18 @@
     "    )\n",
     "\n",
     "    # Train and return validation loss\n",
-    "    val_loss, _ = model.train_model(train_loader, val_loader, epochs=50, lr=lr, weight_decay=weight_decay, device=device)\n",
+    "    val_loss, _ = model.train_model(train_loader, val_loader, epochs=50, lr=lr, weight_decay=weight_decay, device=device, trial = trial)\n",
     "    \n",
     "    return val_loss\n",
     "\n",
     "\n",
     "# Run Optuna optimization\n",
-    "study = optuna.create_study(direction=\"minimize\", study_name=\"mlp_hyperparameter_optimization_baseline_allyears_setseed\", storage=\"sqlite:///mlp_hyperparameter_optimization.db\", load_if_exists=True)\n",
+    "study = optuna.create_study(direction=\"minimize\", \n",
+    "                            study_name=\"mlp_hyperparameter_optimization_baseline_allyears_setseed2\", \n",
+    "                            storage=\"sqlite:///mlp_hyperparameter_optimization.db\", \n",
+    "                            load_if_exists=True,\n",
+    "                            pruner=optuna.pruners.HyperbandPruner(),\n",
+    ")\n",
     "\n",
     "study.optimize(objective, n_trials=100)\n",
     "\n",
@@ -1535,7 +1540,6 @@
     }
    ],
    "source": [
-    "set_seed(42)\n",
     "best_model_baseline.load_state_dict(torch.load(f\"{MODEL_PATH}/{MODEL_PATH_NAME}\"))\n",
     "best_model_baseline.eval()\n",
     "\n",
@@ -1584,7 +1588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1599,10 +1603,15 @@
     }
    ],
    "source": [
+    "# %%\n",
     "import torch\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "# Ensure the model is in evaluation mode\n",
+    "# Dynamically detect device\n",
+    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "\n",
+    "# Ensure model is on the right device and in eval mode\n",
+    "best_model_baseline.to(device)\n",
     "best_model_baseline.eval()\n",
     "\n",
     "y_preds = []\n",
@@ -1611,17 +1620,18 @@
     "# Iterate through the test set and collect predictions & ground truth\n",
     "with torch.no_grad():\n",
     "    for batch in test_loader:\n",
-    "        x_test, y_true = batch  # Get input and ground truth\n",
-    "        x_test = x_test.to(\"cpu\")  # Ensure data is on CPU if needed\n",
+    "        x_test, y_true = batch\n",
+    "        x_test = x_test.to(device)\n",
+    "        y_true = y_true.to(device)\n",
     "\n",
     "        # Get predictions\n",
     "        y_pred = best_model_baseline(x_test)\n",
     "\n",
-    "        # Store results\n",
+    "        # Store results (move to CPU for plotting)\n",
     "        y_preds.append(y_pred.cpu())\n",
     "        y_trues.append(y_true.cpu())\n",
     "\n",
-    "# Convert lists to tensors\n",
+    "# Convert lists to numpy arrays\n",
     "y_preds = torch.cat(y_preds, dim=0).numpy()\n",
     "y_trues = torch.cat(y_trues, dim=0).numpy()\n",
     "\n",
@@ -1634,7 +1644,8 @@
     "plt.ylabel(\"NO₂ Level\")\n",
     "plt.title(\"Predictions vs. Ground Truth\")\n",
     "plt.legend()\n",
-    "#save the plot\n",
+    "\n",
+    "# Save and show plot\n",
     "plt.savefig(f\"{RESULTS_PATH}/plots/{PLOT_FILENAME}\")\n",
     "plt.show()\n"
    ]
