--- a/src/run_mlp_pde_nmer_const_allyears.ipynb
+++ b/src/run_mlp_pde_nmer_const_allyears.ipynb
@@ -1434,13 +1434,18 @@
     "    )\n",
     "\n",
     "    # Train and return validation loss\n",
-    "    val_loss, _ = model.train_model(train_loader, val_loader, epochs=50, all_y_phy= all_y_phy, lr=lr, weight_decay=weight_decay, lambda_phy = lambda_phy, device=device)\n",
+    "    val_loss, _ = model.train_model(train_loader, val_loader, epochs=50, all_y_phy= all_y_phy, \n",
+    "                                    lr=lr, weight_decay=weight_decay, lambda_phy = lambda_phy, device=device, trial = trial)\n",
     "    \n",
     "    return val_loss\n",
     "\n",
     "\n",
     "# Run Optuna optimization\n",
-    "study = optuna.create_study(direction=\"minimize\", study_name=\"mlp_hyperparameter_optimization_PDE_nmer_const_all_years_setseed\", storage=\"sqlite:///mlp_hyperparameter_optimization_phy_pde.db\", load_if_exists=True)\n",
+    "study = optuna.create_study(direction=\"minimize\", \n",
+    "                            study_name=\"mlp_hyperparameter_optimization_PDE_nmer_const_all_years_setseed\", \n",
+    "                            storage=\"sqlite:///mlp_hyperparameter_optimization_phy_pde.db\", \n",
+    "                            load_if_exists=True,\n",
+    "                            pruner=optuna.pruners.HyperbandPruner(),)\n",
     "\n",
     "study.optimize(objective, n_trials=50)\n",
     "\n",
@@ -1701,7 +1706,9 @@
     "val_loader = DataLoader(val_dataset, batch_size=batch_size, shuffle=False)\n",
     "\n",
     "# Train the model\n",
-    "_, training_time = best_model.train_model(train_loader, val_loader, epochs=50, all_y_phy= all_y_phy, lr=best_params[\"lr\"], weight_decay=best_params[\"weight_decay\"], lambda_phy= best_params[\"lambda_phy\"], device=device)\n",
+    "_, training_time = best_model.train_model(train_loader, val_loader, epochs=50, \n",
+    "                                          all_y_phy= all_y_phy, lr=best_params[\"lr\"], weight_decay=best_params[\"weight_decay\"], lambda_phy= best_params[\"lambda_phy\"], \n",
+    "                                          device=device)\n",
     "\n",
     "print(f\"Training time: {training_time}\")\n",
     "# Save the trained model\n",
@@ -1774,7 +1781,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1792,7 +1799,12 @@
     "import torch\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "# Ensure the model is in evaluation mode\n",
+    "\n",
+    "# Dynamically detect device\n",
+    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "\n",
+    "# Ensure model is on the right device and in eval mode\n",
+    "best_model.to(device)\n",
     "best_model.eval()\n",
     "\n",
     "y_preds = []\n",
@@ -1801,17 +1813,18 @@
     "# Iterate through the test set and collect predictions & ground truth\n",
     "with torch.no_grad():\n",
     "    for batch in test_loader:\n",
-    "        x_test, y_true = batch  # Get input and ground truth\n",
-    "        x_test = x_test.to(\"cpu\")  # Ensure data is on CPU if needed\n",
+    "        x_test, y_true = batch\n",
+    "        x_test = x_test.to(device)\n",
+    "        y_true = y_true.to(device)\n",
     "\n",
     "        # Get predictions\n",
     "        y_pred = best_model(x_test)\n",
     "\n",
-    "        # Store results\n",
+    "        # Store results (move to CPU for plotting)\n",
     "        y_preds.append(y_pred.cpu())\n",
     "        y_trues.append(y_true.cpu())\n",
     "\n",
-    "# Convert lists to tensors\n",
+    "# Convert lists to numpy arrays\n",
     "y_preds = torch.cat(y_preds, dim=0).numpy()\n",
     "y_trues = torch.cat(y_trues, dim=0).numpy()\n",
     "\n",
@@ -1824,9 +1837,10 @@
     "plt.ylabel(\"NO₂ Level\")\n",
     "plt.title(\"Predictions vs. Ground Truth\")\n",
     "plt.legend()\n",
-    "#save the plot\n",
+    "\n",
+    "# Save and show plot\n",
     "plt.savefig(f\"{RESULTS_PATH}/plots/{PLOT_FILENAME}\")\n",
-    "plt.show()\n"
+    "plt.show()"
    ]
   }
  ],
