--- a/src/run_mlp_pde_nmer_piece_allyears.ipynb
+++ b/src/run_mlp_pde_nmer_piece_allyears.ipynb
@@ -176,7 +176,7 @@
     {
      "data": {
       "text/plain": [
-       "<torch._C.Generator at 0x7f2b5cfd1fb0>"
+       "<torch._C.Generator at 0x7ff2863e9fb0>"
       ]
      },
      "execution_count": 6,
@@ -213,7 +213,7 @@
     {
      "data": {
       "text/plain": [
-       "<torch._C.Generator at 0x7f2b5cfd1fb0>"
+       "<torch._C.Generator at 0x7ff2863e9fb0>"
       ]
      },
      "execution_count": 7,
@@ -304,7 +304,13 @@
      "output_type": "stream",
      "text": [
       "Imported train_2017_combined_u.csv\n",
-      "Imported train_2018_combined_u.csv\n",
+      "Imported train_2018_combined_u.csv\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Imported train_2020_combined_u.csv\n",
       "Imported train_2021_combined_u.csv\n",
       "Imported train_2022_combined_u.csv\n",
@@ -1382,9 +1388,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import random\n",
+    "def set_seed(seed):\n",
+    "    random.seed(seed)\n",
+    "    np.random.seed(seed)\n",
+    "    torch.manual_seed(seed)\n",
+    "    torch.cuda.manual_seed_all(seed)\n",
+    "    torch.backends.cudnn.deterministic = True\n",
+    "    torch.backends.cudnn.benchmark = False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "batch_size = 16 # set as 16 and freeze it for now\n",
     "\n",
     "def objective(trial):\n",
+    "    set_seed(42)\n",
     "    # Define hyperparameters to search over\n",
     "    n_hidden_layers = trial.suggest_int(\"n_hidden_layers\", 1, 5)\n",
     "    n_hidden_units = trial.suggest_int(\"n_hidden_units\", 32, 256)\n",
@@ -1413,12 +1436,12 @@
     "\n",
     "# Run Optuna optimization\n",
     "study = optuna.create_study(\n",
-    "    direction=\"minimize\", \n",
-    "    study_name=\"mlp_hyperparameter_optimization_PDE_nmer_piece_all_years_updated\", \n",
-    "    storage=\"sqlite:///mlp_hyperparameter_optimization_phy_pde.db\", \n",
-    "    load_if_exists=True,\n",
-    "    pruner=optuna.pruners.HyperbandPruner(),\n",
-    "    )\n",
+    "        direction=\"minimize\", \n",
+    "        study_name=\"mlp_hyperparameter_optimization_PDE_nmer_piece_all_years_setseed\", \n",
+    "        storage=\"sqlite:///mlp_hyperparameter_optimization_phy_pde.db\", \n",
+    "        load_if_exists=True,\n",
+    "        pruner=optuna.pruners.HyperbandPruner(),\n",
+    "        )\n",
     "\n",
     "study.optimize(objective, n_trials=100)\n",
     "\n",
@@ -1465,7 +1488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1502,7 +1525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1522,7 +1545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1531,7 +1554,7 @@
        "'PDE_nmer_piece'"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1542,7 +1565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1655,7 +1678,7 @@
     }
    ],
    "source": [
-    "torch.manual_seed(34)\n",
+    "set_seed(42)\n",
     "batch_size = 16\n",
     "# Train the model with the best hyperparameters\n",
     "best_model = BasicMLP(\n",
@@ -1681,7 +1704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1696,7 +1719,6 @@
     }
    ],
    "source": [
-    "torch.manual_seed(34)  # Set seed for reproducibility\n",
     "best_model.load_state_dict(torch.load(f\"{MODEL_PATH}/{MODEL_PATH_NAME}\"))\n",
     "best_model.eval()\n",
     "\n",
@@ -1745,7 +1767,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1763,7 +1785,12 @@
     "import torch\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "# Ensure the model is in evaluation mode\n",
+    "\n",
+    "# Dynamically detect device\n",
+    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "\n",
+    "# Ensure model is on the right device and in eval mode\n",
+    "best_model.to(device)\n",
     "best_model.eval()\n",
     "\n",
     "y_preds = []\n",
@@ -1772,17 +1799,18 @@
     "# Iterate through the test set and collect predictions & ground truth\n",
     "with torch.no_grad():\n",
     "    for batch in test_loader:\n",
-    "        x_test, y_true = batch  # Get input and ground truth\n",
-    "        x_test = x_test.to(\"cpu\")  # Ensure data is on CPU if needed\n",
+    "        x_test, y_true = batch\n",
+    "        x_test = x_test.to(device)\n",
+    "        y_true = y_true.to(device)\n",
     "\n",
     "        # Get predictions\n",
     "        y_pred = best_model(x_test)\n",
     "\n",
-    "        # Store results\n",
+    "        # Store results (move to CPU for plotting)\n",
     "        y_preds.append(y_pred.cpu())\n",
     "        y_trues.append(y_true.cpu())\n",
     "\n",
-    "# Convert lists to tensors\n",
+    "# Convert lists to numpy arrays\n",
     "y_preds = torch.cat(y_preds, dim=0).numpy()\n",
     "y_trues = torch.cat(y_trues, dim=0).numpy()\n",
     "\n",
@@ -1795,9 +1823,10 @@
     "plt.ylabel(\"NO₂ Level\")\n",
     "plt.title(\"Predictions vs. Ground Truth\")\n",
     "plt.legend()\n",
-    "#save the plot\n",
+    "\n",
+    "# Save and show plot\n",
     "plt.savefig(f\"{RESULTS_PATH}/plots/{PLOT_FILENAME}\")\n",
-    "plt.show()\n"
+    "plt.show()"
    ]
   }
  ],
