--- a/src/run_mlp_pinn_allyears.ipynb
+++ b/src/run_mlp_pinn_allyears.ipynb
@@ -1241,9 +1241,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import random\n",
+    "def set_seed(seed):\n",
+    "    random.seed(seed)\n",
+    "    np.random.seed(seed)\n",
+    "    torch.manual_seed(seed)\n",
+    "    torch.cuda.manual_seed_all(seed)\n",
+    "    torch.backends.cudnn.deterministic = True\n",
+    "    torch.backends.cudnn.benchmark = False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
     "def objective(trial):\n",
     "    # Define hyperparameters to search over\n",
+    "    set_seed(42)\n",
     "    n_hidden_layers = trial.suggest_int(\"n_hidden_layers\", 1, 5)\n",
     "    n_hidden_units = trial.suggest_int(\"n_hidden_units\", 32, 256)\n",
     "    lr = trial.suggest_loguniform(\"lr\", 1e-5, 1e-2)\n",
@@ -1264,7 +1281,8 @@
     "    )\n",
     "\n",
     "    # Train and return validation loss\n",
-    "    val_loss, _ = model.train_model(train_loader, val_loader, epochs=50, lr=lr, weight_decay=weight_decay, lambda_phy = lambda_phy, device=device)\n",
+    "    val_loss, _ = model.train_model(train_loader, val_loader, epochs=50, lr=lr, \n",
+    "                                    weight_decay=weight_decay, lambda_phy = lambda_phy, device=device, trial=trial)\n",
     "    \n",
     "    return val_loss\n",
     "\n",
@@ -1272,13 +1290,13 @@
     "# Run Optuna optimization\n",
     "study = optuna.create_study(\n",
     "    direction=\"minimize\", \n",
-    "    study_name=\"mlp_hyperparameter_optimization_PINN\", \n",
+    "    study_name=\"mlp_hyperparameter_optimization_PINN_setseed\", \n",
     "    storage=\"sqlite:///mlp_hyperparameter_optimization_phy_pde.db\", \n",
     "    load_if_exists=True,\n",
     "    pruner=optuna.pruners.HyperbandPruner(),\n",
     "    )\n",
     "\n",
-    "study.optimize(objective, n_trials=50)\n",
+    "study.optimize(objective, n_trials=100)\n",
     "\n",
     "# Print best hyperparameters\n",
     "best_params = study.best_params\n",
@@ -1409,23 +1427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "best_params = {\n",
-    "    \"n_hidden_layers\": 1,\n",
-    "    \"n_hidden_units\": 172,\n",
-    "    \"lr\": 0.0007975189256538179,\n",
-    "    \"weight_decay\": 1.264634345998174e-08,\n",
-    "    \"lambda_phy\": 7.157830743299169e-05,\n",
-    "    \"batch_size\": 16\n",
-    "}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1538,7 +1540,7 @@
     }
    ],
    "source": [
-    "torch.manual_seed(26)\n",
+    "set_seed(42)\n",
     "# Train the model with the best hyperparameters\n",
     "best_model = BasicMLP(\n",
     "    N_INPUT_UNITS=train_dataset.__n_features_in__(),\n",
@@ -1563,7 +1565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1578,7 +1580,6 @@
     }
    ],
    "source": [
-    "torch.manual_seed(26)  # Set seed for reproducibility\n",
     "best_model.load_state_dict(torch.load(f\"{MODEL_PATH}/{MODEL_PATH_NAME}\"))\n",
     "best_model.eval()\n",
     "\n",
@@ -1627,7 +1628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1642,10 +1643,15 @@
     }
    ],
    "source": [
+    "# %%\n",
     "import torch\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "# Ensure the model is in evaluation mode\n",
+    "# Dynamically detect device\n",
+    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "\n",
+    "# Ensure model is on the right device and in eval mode\n",
+    "best_model.to(device)\n",
     "best_model.eval()\n",
     "\n",
     "y_preds = []\n",
@@ -1654,17 +1660,18 @@
     "# Iterate through the test set and collect predictions & ground truth\n",
     "with torch.no_grad():\n",
     "    for batch in test_loader:\n",
-    "        x_test, y_true = batch  # Get input and ground truth\n",
-    "        x_test = x_test.to(\"cpu\")  # Ensure data is on CPU if needed\n",
+    "        x_test, y_true = batch\n",
+    "        x_test = x_test.to(device)\n",
+    "        y_true = y_true.to(device)\n",
     "\n",
     "        # Get predictions\n",
     "        y_pred = best_model(x_test)\n",
     "\n",
-    "        # Store results\n",
+    "        # Store results (move to CPU for plotting)\n",
     "        y_preds.append(y_pred.cpu())\n",
     "        y_trues.append(y_true.cpu())\n",
     "\n",
-    "# Convert lists to tensors\n",
+    "# Convert lists to numpy arrays\n",
     "y_preds = torch.cat(y_preds, dim=0).numpy()\n",
     "y_trues = torch.cat(y_trues, dim=0).numpy()\n",
     "\n",
@@ -1677,7 +1684,8 @@
     "plt.ylabel(\"NO₂ Level\")\n",
     "plt.title(\"Predictions vs. Ground Truth\")\n",
     "plt.legend()\n",
-    "#save the plot\n",
+    "\n",
+    "# Save and show plot\n",
     "plt.savefig(f\"{RESULTS_PATH}/plots/{PLOT_FILENAME}\")\n",
     "plt.show()\n"
    ]
@@ -1699,7 +1707,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.16"
+   "version": "3.10.15"
   }
  },
  "nbformat": 4,
