added early stopper and scheduler for mlp like valentijns code, changed val loss to mse instead, and got results

--- a/src/run_mlp_linear_allyears.ipynb
+++ b/src/run_mlp_linear_allyears.ipynb
@@ -1266,7 +1266,7 @@
     "    set_seed(42)\n",
     "    n_hidden_layers = trial.suggest_int(\"n_hidden_layers\", 1, 5)\n",
     "    n_hidden_units = trial.suggest_int(\"n_hidden_units\", 32, 256)\n",
-    "    lr = trial.suggest_loguniform(\"lr\", 1e-5, 1e-2)\n",
+    "    lr = trial.suggest_loguniform(\"lr\", 1e-6, 1e-4)\n",
     "    weight_decay = trial.suggest_loguniform(\"weight_decay\", 1e-8, 1e-3)\n",
     "    batch_size = trial.suggest_categorical(\"batch_size\", [8, 16, 32, 64]) \n",
     "    lambda_phy = trial.suggest_loguniform(\"lambda_phy\", 1e-5, 1e-1)\n",
@@ -1285,7 +1285,7 @@
     "    )\n",
     "\n",
     "    # Train and return validation loss\n",
-    "    val_loss, _ = model.train_model(train_loader, val_loader, epochs=50, lr=lr, \n",
+    "    val_loss, _, _, _ = model.train_model(train_loader, val_loader, epochs=50, lr=lr, \n",
     "                                    weight_decay=weight_decay, lambda_phy=lambda_phy, device=device, trial=trial)\n",
     "    \n",
     "    return val_loss\n",
@@ -1293,12 +1293,12 @@
     "\n",
     "# Run Optuna optimization\n",
     "study = optuna.create_study(direction=\"minimize\", \n",
-    "                            study_name=\"mlp_hyperparameter_optimization_linearshift_mse_allyears_setseed\", \n",
+    "                            study_name=\"mlp_hyperparameter_optimization_linearshift_mse_allyears_newmlp\", \n",
     "                            storage=\"sqlite:///mlp_hyperparameter_optimization_phy.db\", \n",
     "                            load_if_exists=True,\n",
     "                            pruner=optuna.pruners.HyperbandPruner(),)\n",
     "\n",
-    "study.optimize(objective, n_trials=50)\n",
+    "study.optimize(objective, n_trials=100)\n",
     "\n",
     "# Print best hyperparameters\n",
     "best_params = study.best_params\n",
@@ -1405,12 +1405,34 @@
     "val_loader = DataLoader(val_dataset, batch_size=best_params[\"batch_size\"], shuffle=False)\n",
     "\n",
     "# Train the model\n",
-    "_, training_time = best_model_baseline.train_model(train_loader, val_loader, epochs=50, lr=best_params[\"lr\"], weight_decay=best_params[\"weight_decay\"], lambda_phy= best_params[\"lambda_phy\"], device=device)\n",
+    "_, training_time, train_losses, val_losses = best_model_baseline.train_model(train_loader, val_loader, epochs=50, lr=best_params[\"lr\"], weight_decay=best_params[\"weight_decay\"], lambda_phy= best_params[\"lambda_phy\"], device=device)\n",
     "\n",
     "print(f\"Training time: {training_time}\")\n",
     "# Save the trained model\n",
     "torch.save(best_model_baseline.state_dict(), f\"{MODEL_PATH}/{MODEL_PATH_NAME}\")\n",
     "print(f\"Model saved as {MODEL_PATH_NAME} in Model folder\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "epochs = range(1, len(train_losses) + 1)\n",
+    "plt.figure(figsize=(10, 6))\n",
+    "plt.plot(epochs, train_losses, label=\"Train Loss\")\n",
+    "plt.plot(epochs, val_losses, label=\"Validation Loss\")\n",
+    "plt.xlabel(\"Epoch\")\n",
+    "plt.ylabel(\"Loss (RMSE)\")\n",
+    "plt.title(f\"Training and Validation Loss Over Epochs for {NN_TYPE} with {LOSS_FUNC}\")\n",
+    "plt.legend()\n",
+    "plt.grid(True)\n",
+    "plt.tight_layout()\n",
+    "plt.savefig(f\"{RESULTS_PATH}/trainval_plots/trainval_{PLOT_FILENAME}\")\n",
+    "plt.show()"
    ]
   },
   {
@@ -1520,7 +1542,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.15"
+   "version": "3.10.16"
   }
  },
  "nbformat": 4,
