updated some notes on preprocess notebook

--- a/src/preprocess.ipynb
+++ b/src/preprocess.ipynb
@@ -25,6 +25,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## **IMPORTANT**\n",
+    "Before preprocessing, download the following datasets into `data/raw/`:\n",
+    "\n",
+    "Weather Data\n",
+    "- **Station**: De Bilt (S260)\n",
+    "- **Source**: KNMI\n",
+    "- **Method**: Run `src/pipeline/knmy.ipynb` (automated via [KNMY repo](https://github.com/KNMI/knmy))\n",
+    "\n",
+    "Pollution Data\n",
+    "- **Stations**: Tuindorp (NL10636), Breukelen (NL10641)\n",
+    "- **Pollutant**: NO₂\n",
+    "- **Source**: [RIVM Luchtmeetnet](https://data.rivm.nl/data/luchtmeetnet/Vastgesteld-jaar/)\n",
+    "- **Method**: Manually download 2016-2023 data from the source in \"breed formaat\" to `data/raw`\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### **Prepare packages and setup**"
    ]
   },
