--- a/src/run_models/run_mlp/run_baseline_mlp_allyears.ipynb
+++ b/src/run_models/run_mlp/run_baseline_mlp_allyears.ipynb
@@ -31,18 +31,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Starting script...\n",
-      "\n",
-      "Running __init__.py for data pipeline...\n",
-      "Modelling package initialized\n",
-      "\n"
+      "Starting script...\n"
      ]
     }
    ],
@@ -77,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -103,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -112,7 +108,7 @@
        "PosixPath('/home/rachel/forecasting_smog_PEML/src')"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -123,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +128,7 @@
        "<module 'config' from '/home/rachel/forecasting_smog_PEML/src/config.py'>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -145,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -169,10 +165,10 @@
     {
      "data": {
       "text/plain": [
-       "<torch._C.Generator at 0x7ffa90a45fb0>"
+       "<torch._C.Generator at 0x7f2b3644e0b0>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -207,20 +203,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<torch._C.Generator at 0x7ffa90a45fb0>"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Change this according to the data you want to use\n",
     "YEARS = [2017, 2018, 2020, 2021, 2022, 2023]\n",
@@ -244,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -299,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -316,7 +301,13 @@
       "Imported train_2018_combined_y.csv\n",
       "Imported train_2020_combined_y.csv\n",
       "Imported train_2021_combined_y.csv\n",
-      "Imported train_2022_combined_y.csv\n",
+      "Imported train_2022_combined_y.csv\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Warning: train_2023_combined_y.csv does not exist.\n",
       "Warning: val_2017_combined_u.csv does not exist.\n",
       "Warning: val_2018_combined_u.csv does not exist.\n",
@@ -365,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -518,7 +509,7 @@
        " [2640 rows x 10 columns]]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
