did transferability test for ams with PINN and baseline

--- a/src/run_baseline_gru_allyears.ipynb
+++ b/src/run_baseline_gru_allyears.ipynb
@@ -170,7 +170,7 @@
     {
      "data": {
       "text/plain": [
-       "<torch._C.Generator at 0x7f23815f20b0>"
+       "<torch._C.Generator at 0x7f4d66dca0b0>"
       ]
      },
      "execution_count": 6,
@@ -242,8 +242,8 @@
      "output_type": "stream",
      "text": [
       "Using all years\n",
-      "MINMAX_PATH:  /home/rachel/forecasting_smog_PEML/data/data_combined/all_years/pollutants_minmax_allyears.csv\n",
-      "DATASET_PATH:  /home/rachel/forecasting_smog_PEML/data/data_combined/all_years\n",
+      "MINMAX_PATH:  /home/rachel/forecasting_smog_PEML/data/data_combined/utrecht/all_years/pollutants_minmax_allyears.csv\n",
+      "DATASET_PATH:  /home/rachel/forecasting_smog_PEML/data/data_combined/utrecht/all_years\n",
       "MODEL_PATH_NAME:  best_GRU_no2_MSE_allyears.pth\n",
       "RESULTS_METRICS_FILENAME:  results_GRU_no2_MSE_allyears.csv\n",
       "BESTPARAMS_FILENAME:  best_params_GRU_no2_MSE_allyears.txt\n",
@@ -297,13 +297,7 @@
      "output_type": "stream",
      "text": [
       "Imported train_2017_combined_u.csv\n",
-      "Imported train_2018_combined_u.csv\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Imported train_2018_combined_u.csv\n",
       "Imported train_2020_combined_u.csv\n",
       "Imported train_2021_combined_u.csv\n",
       "Imported train_2022_combined_u.csv\n",
